# artifact-pulse

./: .gitignore  .gitleaks.toml  ARTIFACT_SYSTEM_GUIDE.md  AUDIT.md  CHANGELOG.md  CHECKPOINT.md  CONTRIBUTING.md  IDENTITY.md  Makefile  PROJECT.md  PROJECT_INDEX.md  README.md  SESSION_HANDOFF.md  __init__.py  artifact_aging.py  artifact_changelog.py  artifact_constants.py  artifact_constraints.py  artifact_core.py  artifact_dashboard.py  artifact_diff.py  artifact_graph.py  artifact_health.py  artifact_insights.py  artifact_insights.py.backup  artifact_link_checker.py  artifact_monitor.py  artifact_new.py  artifact_provenance.py  artifact_stats.py  artifact_types.py  artifact_watch.py  audit_report.py  config_loader.py  insights_api.py  normalize_frontmatter.py  provenance_patch.py  provenance_patch2.py  pyproject.toml  search_artifacts.py  (+3 more)
artifact_pulse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
config/: artifact_dirs.yaml
docs/: ARCHITECTURE.md
docs/ADR/: ADR-001-yaml-frontmatter.md  ADR-002-health-score.md  ADR-003-block-style-yaml.md  ADR-004-cli-diff-watch-new.md
docs/insights/: README.md
scripts/: build_faiss_index.py  evolve_orchestrator.sh  migrate_to_sqlite.py  self_evolve.sh
systemd/: artifact-aging.service  artifact-aging.timer  artifact-audit.service  artifact-audit.timer  artifact-constraints.service  artifact-constraints.timer  artifact-health.service  artifact-health.timer  artifact-links.service  artifact-links.timer  artifact-monitor.service  artifact-monitor.timer  artifact-provenance.service  artifact-provenance.timer  artifact-stats.service  artifact-stats.timer  search-rebuild.service  search-rebuild.timer
templates/: adr-template.md  bl-template.md  inc-template.md  met-template.md  pat-template.md  rul-template.md
tests/: test_artifact_system.py  test_insights.py  test_insights_api.py  test_migration_flock.py  test_miner_v2.py  test_new_features.py  test_session_miner.py
