[project]
name = "artifact-pulse"
version = "4.0.0"
description = "Система мониторинга здоровья артефактов LabDoctorM"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
artifact-health = "src.artifact_health:main"
artifact-search = "src.search_artifacts:main"
artifact-links = "src.artifact_link_checker:main"
artifact-aging = "src.artifact_aging:main"
artifact-stats = "src.artifact_stats:main"
artifact-monitor = "src.artifact_monitor:main"
artifact-provenance = "src.artifact_provenance:main"
artifact-constraints = "src.artifact_constraints:main"
artifact-graph = "src.artifact_graph:main"
artifact-changelog = "src.artifact_changelog:main"
artifact-audit = "src.audit_report:main"
artifact-normalize = "src.normalize_frontmatter:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
